--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Compétences</h1>
+        <p>programmation</p>
+        <p>hacking</p>
+        <p>réseaux et systèmes</p>
 </body>
 </html>
