mise en place de la section associations

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Associations</h1>
+        <p>Club de foot</p>
 </body>
 </html>
